Fixed nav for safari on iphone

--- a/approot/assets/c/style.less
+++ b/approot/assets/c/style.less
@@ -32,10 +32,10 @@ html, body {
 	padding-bottom : 0px;
 }
 .topbar .nav {
-	margin : 0px 0px 0px 6px;
+	margin : 0px 0px 0px 7px;
 }
 .topbar .nav a {
-	padding: 41px 17px;
+	padding: 41px 16px;
 	line-height : 17px;
 	font-size : 17px;
 }
